--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,6 @@
     min-width: 1100px;
     max-width: 1600px;
     margin: 0 auto;
-    font-family: "Helvetica Neue","Inter" "Arial", sans-serif;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-weight: normal;
   }
