--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -2,7 +2,7 @@
   text-align: center;
   line-height: 1.15;
   font-size: 60px;
-  font-style: bold;
+  font-weight: 700;
   margin: 0 auto;
   width: 60%;
   padding-top: 100px;
