--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,6 +1,6 @@
 .two-columns__paragraph {
+    margin: 0;
     line-height: 34px;
     font-size: 24px;
-    row-gap: 30px;
-    font-weight: normal;
+    font-weight: 400;
 }
