--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,24 +1,21 @@
 @font-face {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
     src: 
-    url(../fonts/Inter/Inter-Regular.woff2) format('woff2'),
-    url(../fonts/Inter/Inter-Regular.woff) format('woff');
+    url(../fonts/Inter/Inter-Regular.woff) format("woff"),
+    url(../fonts/Inter/Inter-Regular.woff2) format("woff2");
+    font-weight: 400;
+    font-family: 'Inter';
 }
 @font-face {
-    font-family: "Inter-Semibold";
-    font-style: normal;
-    font-weight: 600;
     src: 
-    url(../fonts/Inter/Inter-SemiBold.woff2) format('woff2'),
-    url(../fonts/Inter/Inter-SemiBold.woff) format('woff');
-}
-@font-face {
-    font-family: "Inter-Bold";
-    font-style: bold;
+    url(../fonts/Inter/Inter-SemiBold.woff) format("woff")
+    url(../fonts/Inter/Inter-SemiBold.woff2) format("woff2");
     font-weight: 700;
+    font-family: 'Inter';
+}
+@font-face {
     src: 
-    url(../fonts/Inter/Inter-SemiBold.woff2) format('woff2'),
-    url(../fonts/Inter/Inter-SemiBold.woff) format('woff');
+    url(../fonts/Inter/Inter-Bold.woff) format("woff")
+    url(../fonts/Inter/Inter-Bold.woff2) format("woff2");
+    font-weight: 900;
+    font-family: 'Inter';
 }
