--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,6 @@
 .feynman {
     background-color: #f2f2f2;
     position: relative;
-    height: 890px;
+    min-height: 890px;
     margin: 0 auto;
   }
