--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,7 +1,9 @@
 .header__link {
     color: #2f80ed;
     text-decoration: none;
+    z-index: 2;
   }
 .header__link:hover {
     opacity: 0.5;
+    transition: opacity .2s ease-in-out;
   }
