--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -1,4 +1,5 @@
 .header__subtitle {
+    margin: 0;
     width: 388px;
     line-height: 25px;
     font-size: 18px;
@@ -6,5 +7,5 @@
     position: absolute;
     bottom: 30px;
     left: 64px;
-    z-index: 1;
+    z-index: 2;
   } 
