--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,7 +1,10 @@
 .header__title {
+    margin: 0;
+    position: relative;
     width: 730px;
     line-height: 96px;
     font-size: 102px;
     font-weight: 700;
     padding-left: 64px;
+    z-index: 2;
 }
