--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,8 +1,7 @@
 .khan__book-pic {
   margin: 0;
-  background-image: url(../../../images/khan-book.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
+  object-fit: cover;
+  object-position: top;
   width: 620px;
   height: 608px;
   margin-right: 48px;
