--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,4 +1,7 @@
 .resources__logo-zone {
+    margin: 0;
+    padding: 0;
+    list-style: none;
     width: 1100px;
     display: flex;
     flex-direction: row;
