--- a/blocks/two-columns/__main-text/two-columns__main-text.css
+++ b/blocks/two-columns/__main-text/two-columns__main-text.css
@@ -1,7 +1,7 @@
 .two-columns__main-text {
     margin: 0;
     width: 80%;
-    max-width: 784px;
+    min-width: 784px;
     display: flex;
     flex-direction: column;
     row-gap: 30px;
