--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,6 +5,7 @@
     font-size: 30px;
     font-weight: normal;
     text-decoration: none;
+    align-self: flex-start;
   }
   
   .khan__buy-link:hover {
