--- a/blocks/two-columns/two-columns.css
+++ b/blocks/two-columns/two-columns.css
@@ -4,3 +4,9 @@
     display: flex;
     justify-content: space-between;
   }
+
+@media screen and (max-width: 1023px) {
+  .two-columns {
+    column-gap: 20px;
+  }
+}
