--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,6 +1,6 @@
 .cards__image {
-    width: 160px;
-    height: 160px;
-    margin: 60px 40px 43px 40px;
+    max-width: 160px;
+    max-height: 160px;
+    margin: 60px 40px 40px 40px;
     border-radius: 50%;
   }
