--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -2,10 +2,15 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    width: 240px;
-    margin-right: 100px;
+    max-width: 240px;
   }
-  
+
   .cards__item:nth-of-type(3n) {
     margin-right: 0;
   }
+
+@media screen and (max-width: 1023px) {
+  .cards__item {
+    margin: 0;
+  }
+}
