--- a/blocks/description/description.css
+++ b/blocks/description/description.css
@@ -2,3 +2,9 @@
     padding-top: 100px;
     margin: 0 auto;
   }
+
+@media screen and (max-width: 1023px) {
+  .description {
+    padding-top: 60px;
+  }
+}
