--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -1,6 +1,6 @@
 .header__subtitle {
     margin: 0;
-    width: 388px;
+    max-width: 388px;
     line-height: 25px;
     font-size: 18px;
     font-weight: normal;
@@ -8,4 +8,11 @@
     bottom: 30px;
     left: 64px;
     z-index: 2;
-  } 
+  }
+
+@media screen and (max-width: 1200px) {
+  .header__subtitle {
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
