--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,10 +1,18 @@
 .header__title {
     margin: 0;
     position: relative;
-    width: 730px;
+    max-width: 730px;
     line-height: 96px;
     font-size: 102px;
     font-weight: 700;
     padding-left: 64px;
     z-index: 2;
+}
+
+@media screen and (max-width: 1200px) {
+  .header__title {
+    line-height: 72px;
+    font-size: 76px;
+    padding-left: 24px;
+  }
 }
