--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -4,4 +4,10 @@
     background-color: #f2f2f2;
     position: relative;
     padding-top: 160px;
-  } 
+  }
+
+@media screen and (max-width: 1023px) {
+  .oakley {
+    padding-top: 120px;
+  }
+}
