--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -6,4 +6,10 @@
   margin: 0 auto;
   width: 60%;
   padding-top: 100px;
-} 
+}
+
+@media screen and (max-width: 1023px) {
+  .section-title {
+    padding-top: 60px;
+  }
+}
