--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -1,8 +1,15 @@
 .two-columns__brief {
     margin: 0;
-    width: 175px;
+    max-width: 175px;
     color: #2f80ed;
     line-height: 1.2;
     font-size: 18px;
     font-weight: normal;
   }
+
+@media screen and (max-width: 1023px) {
+  .two-columns__brief {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
