--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -4,3 +4,10 @@
     font-size: 24px;
     font-weight: 400;
 }
+
+@media screen and (max-width: 1023px) {
+    .two-columns__paragraph {
+      font-size: 20px;
+      line-height: 28px;
+    }
+}
